--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
     background-image: url(./../images/placeholder.png);
     background-repeat: no-repeat;
     background-size: 100%;
+    background-attachment: fixed;
     height: 1080px;
     position: relative;
 
@@ -236,6 +237,7 @@
 .work {
     background: #1A1A1A;
 
+
 }
 
 .work_header {
@@ -337,4 +339,246 @@
     font-weight: 400;
     line-height: 18px;
     letter-spacing: -0.162px;
+}
+
+.dish {
+    background: #1A1A1A;
+    padding-top: 120px;
+}
+
+.dish_container {
+    padding: 0;
+}
+
+.dish_center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dish_header {
+    width: 50%;
+    color: #D9D9D9;
+    text-align: center;
+    font-family: "Helvetica Neue";
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 90px;
+    letter-spacing: 7.2px;
+    background-image: url(./../images/dishes.png);
+    background-repeat: no-repeat;
+    background-position: bottom;
+    margin-bottom: 20px;
+}
+
+.dish_line {
+    width: 60px;
+    height: 2px;
+    background: #34C759;
+    margin-bottom: 60px;
+}
+
+.dish_list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.dish_item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 350px;
+    height: 493px;
+    flex-shrink: 0;
+    border-radius: 6px;
+    background: #252525;
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.10);
+    margin-bottom: 30px;
+}
+
+.dish_img {
+    margin-bottom: 29px;
+}
+
+.dish_item-header {
+    width: 290px;
+    color: #D9D9D9;
+    font-family: "Helvetica";
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 10px;
+}
+
+.dish_item-text {
+    width: 290px;
+    color: #A4A8B2;
+    font-family: "Helvetica";
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: -0.15px;
+    margin-bottom: 20px;
+}
+
+.dish_item-choise {
+    width: 290px;
+    color: #85878C;
+    font-family: "Helvetica";
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: -0.162px;
+    margin-bottom: 20px;
+}
+
+.dish_list-star {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+}
+
+.dish_list-number {
+    color: #B3B3B3;
+    font-family: "Helvetica";
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 30px;
+    letter-spacing: 1.5px;
+}
+
+.dish_list-button {
+    width: 100px;
+    height: 40px;
+    flex-shrink: 0;
+    color: var(--Dark-Gray, #252525);
+    text-align: center;
+    font-family: "Helvetica";
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 40px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    background: rgba(52, 199, 89, 1);
+    border: none;
+    cursor: pointer;
+    border-radius: 43px;
+    -webkit-border-radius: 43px;
+    -moz-border-radius: 43px;
+    -ms-border-radius: 43px;
+    -o-border-radius: 43px;
+}
+
+.dish_list-bt {
+    width: 100px;
+    height: 40px;
+    flex-shrink: 0;
+    color: rgba(255, 255, 255, 0.50);
+    text-align: center;
+    font-family: "Helvetica";
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 40px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    background: transperent;
+    background-color: rgba(48, 48, 48, 1);
+    border: none;
+    cursor: pointer;
+    border-radius: 43px;
+    -webkit-border-radius: 43px;
+    -moz-border-radius: 43px;
+    -ms-border-radius: 43px;
+    -o-border-radius: 43px;
+
+}
+
+.wrap {
+    background: #1A1A1A;
+    padding-top: 120px;
+    margin-bottom: 120px;
+}
+
+.wrap_container {
+    padding: 0;
+}
+
+.wrap_center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.wrap_header {
+    color: #D9D9D9;
+    text-align: center;
+    font-family: "Helvetica Neue";
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 90px;
+    letter-spacing: 7.2px;
+    text-transform: capitalize;
+    background-image: url(./../images/chefs.png);
+    background-repeat: no-repeat;
+    background-position: bottom;
+    margin-bottom: 21px;
+}
+
+.wrap_line {
+    width: 60px;
+    height: 2px;
+    flex-shrink: 0;
+    background: #34C759;
+    margin-bottom: 68px;
+}
+
+.wrap_list {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+}
+
+.wrap_item-dispaly {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+
+.warp_img {
+    margin-bottom: 24px;
+}
+
+.wrap_item-header {
+    color: #FFF;
+    font-family: "Helvetica";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.225px;
+    margin-bottom: 6px;
+}
+
+.wrap_text {
+    color: rgba(255, 255, 255, 0.50);
+    font-family: "Helvetica";
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: -0.15px;
+}
+
+.wrap_img-all {
+    display: flex;
+    gap: 30px;
 }
