--- a/css/style.css
+++ b/css/style.css
@@ -360,7 +360,7 @@
     width: 50%;
     color: #D9D9D9;
     text-align: center;
-    font-family: "Helvetica Neue";
+    font-family: "Helvetica";
     font-size: 36px;
     font-style: normal;
     font-weight: 400;
@@ -504,7 +504,7 @@
 .wrap {
     background: #1A1A1A;
     padding-top: 120px;
-    margin-bottom: 120px;
+
 }
 
 .wrap_container {
@@ -520,7 +520,7 @@
 .wrap_header {
     color: #D9D9D9;
     text-align: center;
-    font-family: "Helvetica Neue";
+    font-family: "Helvetica";
     font-size: 36px;
     font-style: normal;
     font-weight: 400;
@@ -581,4 +581,396 @@
 .wrap_img-all {
     display: flex;
     gap: 30px;
+}
+
+.our {
+
+    background: #1A1A1A;
+    padding-top: 120px;
+}
+
+.our_container {
+    padding: 0;
+
+}
+
+.our_center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.our_header {
+    color: #D9D9D9;
+    text-align: center;
+    font-family: "Helvetica";
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 90px;
+    letter-spacing: 7.2px;
+    background-image: url(./../images/recipes.png);
+    background-repeat: no-repeat;
+    background-position: bottom;
+    margin-bottom: 28px;
+}
+
+.our_line {
+    width: 60px;
+    height: 2px;
+    flex-shrink: 0;
+    background: #34C759;
+    margin-bottom: 60px;
+}
+
+.our_left {
+    background-image: url(./../images/our.png);
+    background-repeat: no-repeat;
+    width: 540px;
+    height: 510px;
+
+}
+
+.our_button {
+    width: 89px;
+    height: 25px;
+    flex-shrink: 0;
+    background-color: #000;
+    border: none;
+    cursor: pointer;
+    color: #FFF;
+    text-align: center;
+    font-family: "Helvetica";
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 25px;
+    letter-spacing: 1.25px;
+    text-transform: uppercase;
+    margin-top: 60px;
+    margin-bottom: 65px;
+
+}
+
+.our_time {
+    color: #FFF;
+    font-family: "Helvetica";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 25px;
+
+}
+
+.our_text {
+    width: 411px;
+    color: #FFF;
+    text-align: center;
+    font-family: "Helvetica";
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 40px;
+    margin-bottom: 45px;
+
+}
+
+.our_left-header {
+    color: #FFF;
+    font-family: "Helvetica";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 67px;
+
+}
+
+.our_left-display {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+.our_left-number {
+    color: #FFF;
+    font-family: "Helvetica";
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 30px;
+
+}
+
+.our_container {
+    padding: 0;
+}
+
+.our_all {
+    display: flex;
+    justify-content: space-between;
+}
+
+.our_left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.our_right-card {
+    padding: 30px 25px;
+    width: 540px;
+    height: 150px;
+    flex-shrink: 0;
+    border-radius: 6px;
+    background: #252525;
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.10);
+    margin-bottom: 30px;
+}
+
+.card {
+    background-image: url(./../images/our_card.png);
+}
+
+.card-color {
+    background: var(--Primary, #34C759);
+    filter: drop-shadow(0px 2px 5px rgba(0, 0, 0, 0.05));
+}
+
+.our_right-text {
+    width: 505px;
+    color: #FFF;
+    font-family: "Helvetica";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 10px;
+}
+
+.our_right-all {
+    display: flex;
+    justify-content: space-between;
+}
+
+.our_right-display {
+    display: inline-flex;
+    gap: 20px;
+}
+
+.our_right-bt {
+    width: 65px;
+    height: 25px;
+    flex-shrink: 0;
+    background-color: #000;
+    color: #FFF;
+    text-align: center;
+    font-family: "Helvetica";
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 25px;
+    letter-spacing: 1.25px;
+    text-transform: uppercase;
+    border: none;
+    cursor: pointer;
+}
+
+.our_right-time {
+    color: #B3B3B3;
+    font-family: "Helvetica";
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 25px;
+}
+
+.our_right-message {
+    display: flex;
+    align-items: center;
+    gap: 14px;
+}
+
+.social {
+    background: #1A1A1A;
+    padding-top: 91px;
+    height: 700px;
+}
+
+.social_container {
+    padding: 0;
+}
+
+.social_center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.social_header {
+    color: #D9D9D9;
+    text-align: center;
+    font-family: "Helvetica";
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 90px;
+    letter-spacing: 7.2px;
+    background-image: url(./../images/SOCIAL.png);
+    background-repeat: no-repeat;
+    background-position: bottom;
+    margin-bottom: 28px;
+    width: 50%;
+}
+
+.social_line {
+    width: 60px;
+    height: 2px;
+    flex-shrink: 0;
+    background: var(--Primary, #34C759);
+    margin-bottom: 60px;
+}
+
+.social_list {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+}
+
+.social_item {
+    padding: 25px;
+    width: 350px;
+    height: 330px;
+    flex-shrink: 0;
+    background: #252525;
+    filter: drop-shadow(0px 2px 5px rgba(0, 0, 0, 0.10));
+}
+
+.social_images {
+    background-image: url(./../images/social_images.png);
+    width: 350px;
+    height: 230px;
+    margin-top: 25px;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 0;
+}
+
+.social_display {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+    margin-bottom: 10px;
+}
+
+.social_text {
+    width: 106px;
+    color: #BFBFBF;
+    font-family: "Helvetica";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.social_button {
+    width: 100px;
+    height: 40px;
+    flex-shrink: 0;
+    color: rgba(255, 255, 255, 0.50);
+    text-align: center;
+    font-family: "Helvetica";
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 40px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    background: transperent;
+    background-color: rgba(48, 48, 48, 1);
+    border: none;
+    cursor: pointer;
+    border-radius: 40px;
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    -ms-border-radius: 40px;
+    -o-border-radius: 40px;
+}
+
+.social_hr {
+    width: 100%;
+    height: 2px;
+    background-color: #303030;
+    margin-bottom: 20px;
+}
+
+.social_time {
+    width: 280px;
+    color: #737373;
+    font-family: "Helvetica";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 10px;
+}
+
+.social_item-text {
+    width: 280px;
+    color: rgba(255, 255, 255, 0.70);
+    font-family: "Helvetica";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 10px;
+}
+
+.social_link {
+    text-decoration: none;
+    width: 280px;
+    color: var(--Primary, #34C759);
+    font-family: "Helvetica";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.switcher {
+    background: #252525;
+    filter: drop-shadow(0px 2px 5px rgba(0, 0, 0, 0.10));
+}
+
+.switcher_line {
+    margin-top: 33px;
+    height: 2px;
+    flex-shrink: 0;
+    background: #303030;
+    margin-bottom: 40px;
+   
+}
+
+.switcher_top {
+    padding-top: 30px;
+}
+
+.switcher_center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.switcher_link {
+    text-decoration: none;
+    color: #737373;
+    text-align: center;
+    font-family: "Helvetica";
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    margin-bottom: 30px;
+
 }
